fixes and updated default potion config to prepare for publishing